--- a/application/react/src/assets/styles/_global.scss
+++ b/application/react/src/assets/styles/_global.scss
@@ -1,51 +1,22 @@
 @import "assets/styles/_variables.scss";
 
-
 // global text style
 .text-style{
-  color: $primary-grey;
+  color: $text-color;
 
-  line-height: 1.64;
+  line-height: 1.48;
   font: {
     size: 0.8889rem;
     weight: 400;
   }
 }
 
-/* about delivery */
-.about-delivery{
-  width: 100%;
-  padding: {
-    top: 25px;
-    bottom: 25px;
-  }
-  margin: {
-    top: 25px;
-    bottom: 25px;
-  }
+// global title style
+.title-style{
+  margin-bottom: 40px;
 
-  background-color: $primary-white;
-
-  &__title{   
-    text-transform: uppercase;
-  }
-
-  .content{
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  &__left-side{
-    flex: 0 0 60%;
-    padding-right: 10px;
-  }
-  &__right-side{
-    flex: 0 0 40%;
-    padding-left: 10px;
-
-  }
-
-  &__text{
-  
+  text: {
+    transform: uppercase;
+    align: center;
   }
 }
