--- a/application/react/src/assets/styles/_variables.scss
+++ b/application/react/src/assets/styles/_variables.scss
@@ -7,6 +7,7 @@ $primary-red: #E04343;
 $primary-grey: #a1a9b0;
 $primary-green: #84B71D;
 
+$text-color: #3d3d3d;
 
 /*
  * element colors
@@ -21,7 +22,6 @@ $status-limited: $primary-grey;
 
 // ios boxShadow
 $ios-shadow: 0 1px 6px 0 rgba($primary-black, 0.05);
-
 
 /*
  * Font
