--- a/application/react/src/assets/styles/_variables.scss
+++ b/application/react/src/assets/styles/_variables.scss
@@ -22,6 +22,7 @@ $status-limited: $primary-grey;
 
 // ios boxShadow
 $ios-shadow: 0 1px 6px 0 rgba($primary-black, 0.05);
+$hover-shadow: 0 5px 15px rgba($primary-black, 0.3);
 
 /*
  * Font
