--- a/application/react/src/components/bait-colors/styles.css
+++ b/application/react/src/components/bait-colors/styles.css
@@ -27,8 +27,15 @@
   .bait-color-slider .slick-slide {
     outline: 0;
     width: 170px;
-    padding: 0 35px;
     text-align: center; }
+    @media (max-width: 568px) {
+      .bait-color-slider .slick-slide {
+        padding-left: 20px;
+        padding-right: 20px; } }
+    @media (min-width: 569px) {
+      .bait-color-slider .slick-slide {
+        padding-left: 35px;
+        padding-right: 35px; } }
     .bait-color-slider .slick-slide *:focus, .bait-color-slider .slick-slide:focus {
       outline: 0; }
 
