--- a/application/react/src/components/bait-preview-wrapper/styles.scss
+++ b/application/react/src/components/bait-preview-wrapper/styles.scss
@@ -50,7 +50,7 @@
 		box-shadow: $ios-shadow;
 
 		&:hover{
-			box-shadow: 0 5px 15px rgba($primary-black, 0.3);
+			box-shadow: $hover-shadow;
 		}
 	}
 
