--- a/application/react/src/components/welcome/styles.css
+++ b/application/react/src/components/welcome/styles.css
@@ -12,7 +12,7 @@
  */
 /* welcome slide */
 .welcome {
-  height: 400px;
+  height: 500px;
   align-items: center;
   justify-content: center;
   position: relative;
@@ -33,3 +33,19 @@
     .welcome {
       background-attachment: fixed;
       background-position: 50% bottom; } }
+
+.quote {
+  display: block;
+  padding: 10px 25px;
+  float: right;
+  border-radius: 5px;
+  text-align: left;
+  box-shadow: 0 1px 6px 0 rgba(20, 20, 20, 0.05);
+  background-color: rgba(255, 255, 255, 0.3); }
+  .quote__text {
+    margin-bottom: 0;
+    font-weight: 500;
+    font-style: italic; }
+  .quote__author {
+    display: block;
+    margin-left: 20px; }
