--- a/application/react/src/App.scss
+++ b/application/react/src/App.scss
@@ -3,6 +3,8 @@
 @import 'assets/styles/_variables.scss';
 @import 'assets/styles/_layout.scss';
 @import 'assets/styles/_global.scss';
+@import 'assets/styles/_button.scss';
 
 @import 'assets/styles/_header.scss';
 @import 'assets/styles/_footer.scss';
+
