--- a/application/react/src/App.css
+++ b/application/react/src/App.css
@@ -691,7 +691,7 @@ body::-webkit-scrollbar-thumb {
  */
 .text-style {
   color: #3d3d3d;
-  line-height: 1.48;
+  line-height: 1.64;
   font-size: 0.8889rem;
   font-weight: 400; }
 
@@ -699,6 +699,37 @@ body::-webkit-scrollbar-thumb {
   margin-bottom: 40px;
   text-transform: uppercase;
   text-align: center; }
+
+/*
+ * Theme colors
+ */
+/*
+ * element colors
+ */
+/*
+ * Font
+ */
+/*
+ * Grid mediaqueries
+ */
+.btn {
+  padding: 8px 25px;
+  outline: 0;
+  border: 0;
+  display: inline-block;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #ffffff;
+  text-decoration: none;
+  background-color: #E04343;
+  box-shadow: 0 1px 6px 0 rgba(20, 20, 20, 0.05);
+  transition: .15s ease-in-out; }
+  .btn:hover {
+    color: #E04343;
+    background-color: #ffffff;
+    box-shadow: 0 5px 15px rgba(20, 20, 20, 0.3); }
 
 .header {
   padding: 20px;
@@ -727,7 +758,15 @@ body::-webkit-scrollbar-thumb {
   padding-bottom: 70px;
   padding-right: 15px;
   padding-left: 15px;
-  text-align: center; }
+  color: #ffffff;
+  text-align: center;
+  background: #3d3d3d; }
+  .prefooter__text {
+    margin-bottom: 40px;
+    color: #ffffff; }
+    .prefooter__text span {
+      font-size: 18px;
+      border-bottom: 1px solid rgba(224, 67, 67, 0.5); }
 
 .footer {
   padding-top: 70px;
