--- a/application/react/src/components/bait-view/styles.css
+++ b/application/react/src/components/bait-view/styles.css
@@ -14,34 +14,22 @@
 .bait-view {
   position: relative;
   width: 100%;
-  padding-top: 50px;
   padding-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+  /* main image */
   /* gallery */
   /* title */
   /* name */
   /* weight */
   /* description */
   /* price */ }
-  @media (max-width: 768px) {
-    .bait-view {
-      display: flex;
-      flex-direction: column; } }
-  @media (min-width: 769px) {
-    .bait-view {
-      float: left; } }
-  .bait-view__content {
-    padding: 25px;
-    background-color: #ffffff; }
-    @media (max-width: 768px) {
-      .bait-view__content {
-        order: 1; } }
-    @media (min-width: 769px) {
-      .bait-view__content {
-        width: calc(50% - 25px);
-        float: left;
-        margin-left: 25px;
-        position: sticky;
-        top: 0; } }
+  .bait-view__main-image {
+    height: 60vh; }
+    .bait-view__main-image img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
   .bait-view-gallery {
     /* gallery item */ }
     @media (max-width: 768px) {
@@ -81,31 +69,3 @@
     margin-bottom: 40px;
     font-size: 1.5rem;
     color: #E04343; }
-
-.button--back {
-  border: 0;
-  outline: 0;
-  padding: 0;
-  margin: 0;
-  background-color: inherit;
-  position: absolute;
-  top: 0;
-  left: 0px;
-  z-index: 2;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  font-size: 1rem;
-  font-weight: normal;
-  text-transform: uppercase;
-  color: #a1a9b0;
-  transition: .15s linear; }
-  .button--back:hover {
-    color: #141414; }
-    .button--back:hover svg {
-      fill: #141414; }
-  .button--back svg {
-    display: inline-block;
-    margin-right: 10px;
-    fill: #a1a9b0;
-    transition: .15s linear; }
