--- a/application/react/src/components/bait-view/styles.scss
+++ b/application/react/src/components/bait-view/styles.scss
@@ -4,35 +4,19 @@
 .bait-view{
   position: relative;
   width: 100%;
+  padding-bottom: 50px;
 
-  padding: {
-    top: 50px;
-    bottom: 50px;
-  }
+  display: flex;
+  flex-direction: column;
 
-  @media(max-width: $screen-sm-max){
-    display: flex;
-    flex-direction: column;
-  }
-  @media(min-width: $screen-sm){
-    float: left;
-  }
+  /* main image */
+  &__main-image{
+    height: 60vh;
 
-  &__content{
-    padding: 25px;
-
-    background-color: $primary-white;
-    
-    @media(max-width: $screen-sm-max){
-      order: 1;
-    }
-    @media(min-width: $screen-sm){
-      width: calc(50% - 25px);
-      float: left;
-      margin-left: 25px;
-
-      position: sticky;
-      top: 0;
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
   }
 
@@ -107,48 +91,5 @@
 
     font-size: 1.5rem;
     color: $primary-red;
-  }
-}
-
-.button--back{
-  border: 0;
-  outline: 0;
-  padding: 0;
-  margin: 0;
-  background-color: inherit;
-
-  position: absolute;
-  top: 0; left: 0px;
-  z-index: 2;
-
-  cursor: pointer;
-
-  display: flex;
-  align-items: center;
-
-  font: {
-    size: 1rem;
-    weight: normal;
-  }
-
-  text-transform: uppercase;
-  color: $primary-grey;
-
-  transition: .15s linear;
-
-  &:hover{
-    color: $primary-black;
-
-    svg{
-      fill: $primary-black;
-    }
-  }
-
-  svg{
-    display: inline-block;
-    margin-right: 10px;
-    fill: $primary-grey;
-
-    transition: .15s linear;
   }
 }
