--- a/application/react/src/components/bait-preview-wrapper/styles.scss
+++ b/application/react/src/components/bait-preview-wrapper/styles.scss
@@ -5,12 +5,7 @@
 	display: flex;
 	flex-wrap: wrap;
 
-	padding: {
-		left: 15px;
-		right: 15px;
-		top: 60px;
-		bottom: 90px;
-	}
+	padding: 60px 90px;
 }
 
 /* bait item */
