--- a/application/react/src/App.css
+++ b/application/react/src/App.css
@@ -604,6 +604,7 @@ body {
   margin-right: auto; }
   @media (max-width: 1280px) {
     .content {
+      width: 100%;
       padding-left: 15px;
       padding-right: 15px; } }
   @media (min-width: 1281px) {
