--- a/application/react/src/components/bait-view/styles.css
+++ b/application/react/src/components/bait-view/styles.css
@@ -14,43 +14,21 @@
 .bait-view {
   position: relative;
   width: 100%;
-  padding-bottom: 50px;
   display: flex;
   flex-direction: column;
   /* main image */
-  /* gallery */
   /* title */
   /* name */
   /* weight */
   /* description */
   /* price */ }
   .bait-view__main-image {
-    height: 60vh; }
+    height: 60vh;
+    margin-bottom: 25px; }
     .bait-view__main-image img {
       width: 100%;
       height: 100%;
       object-fit: cover; }
-  .bait-view-gallery {
-    /* gallery item */ }
-    @media (max-width: 768px) {
-      .bait-view-gallery {
-        order: 2;
-        margin-top: 25px; } }
-    @media (min-width: 769px) {
-      .bait-view-gallery {
-        width: 50%;
-        float: left; } }
-    .bait-view-gallery__item {
-      width: 100%;
-      padding: 15px;
-      margin-bottom: 25px;
-      background-color: #ffffff; }
-    .bait-view-gallery img {
-      display: block;
-      width: 100%;
-      height: auto;
-      object-fit: cover;
-      flex-shrink: 0; }
   .bait-view__title {
     display: flex;
     align-items: center;
@@ -66,6 +44,5 @@
     .bait-view__description span + span {
       margin-top: 15px; }
   .bait-view__price {
-    margin-bottom: 40px;
     font-size: 1.5rem;
     color: #E04343; }
