--- a/application/public/static/css/colors/default.css
+++ b/application/public/static/css/colors/default.css
@@ -22,7 +22,7 @@ body {
   background: #fff;
 }
 .top-left-part {
-  background: #fff;
+  /* background: #fff; */
 }
 .top-left-part .dark-logo {
   display: none;
