--- a/application/public/static/less/common.less
+++ b/application/public/static/less/common.less
@@ -1092,7 +1092,11 @@ pre {
         line-height: 59px;
         font-size: 18px;
         padding-left: 10px;
-        text-transform: uppercase;
+        // text-transform: uppercase;
+    }
+    span{
+        color: #f33155;
+        font-weight: 500;
     }
     .light-logo {
         display: none;
