--- a/application/public/static/less/responsive.less
+++ b/application/public/static/less/responsive.less
@@ -48,9 +48,9 @@
     .hide-sidebar{
         .top-left-part{
             width: auto;
-            .logo span{
-                display: none;
-            }
+            // .logo span{
+            //     display: none;
+            // }
         }
         .sidebar{
             left: -240px;
@@ -185,9 +185,9 @@
             margin-right: 0px;
         }
     }
-    .top-left-part {
-        width: 60px;
-    }
+    // .top-left-part {
+    //     width: 60px;
+    // }
     .navbar-top-links > li {
         &:last-child {
             margin-right: 0px;
