--- a/application/react/src/components/preloader/styles.css
+++ b/application/react/src/components/preloader/styles.css
@@ -11,7 +11,10 @@
  * Grid mediaqueries
  */
 .preloader {
-  width: 100%; }
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center; }
   .preloader__block {
     width: 70px;
     height: 70px;
