--- a/application/react/src/components/preloader/styles.scss
+++ b/application/react/src/components/preloader/styles.scss
@@ -2,23 +2,27 @@
 
 .preloader{
   width: 100%;
+  height: 100vh;
+
+  display: flex;
+  align-items: center;
   
   &__block{
     width: 70px;
     height: 70px;
-    margin: 0 auto;;
+    margin: 0 auto;
     position: relative;
   }
 
   &__circle{
-    border-radius:100%;
+    border-radius: 100%;
     
-    position:absolute;
+    position: absolute;
     
     border-width: 1px;
     border-style: solid;
-    border-bottom:none;
-    border-right:none;
+    border-bottom: none;
+    border-right: none;
     
     animation-timing-function: linear;
     animation: up 3s;
@@ -36,12 +40,12 @@
       width: 70px;
       height: 70px;
       animation-delay: .8s;
-      border-color: $primary-red
+      border-color: $primary-red;
     }
 
     &-2{
-      width:60px;
-      height:60px;
+      width: 60px;
+      height: 60px;
 
       animation-delay: .6s;
       
@@ -51,10 +55,10 @@
       border-color: darken($primary-red, 10%);
     }
     &-3{
-      width:50px;
-      height:50px;
+      width: 50px;
+      height: 50px;
 
-      animation-delay:.4s;
+      animation-delay: .4s;
 
       margin-top: -25px;
       margin-left: -25px;
@@ -62,8 +66,8 @@
       border-color: darken($primary-red, 20%);
     }
     &-4{
-      width:40px;
-      height:40px;
+      width: 40px;
+      height: 40px;
 
       animation-delay:.2s;
 
@@ -74,8 +78,8 @@
   
     }
     &-5{
-      width:30px;
-      height:30px;
+      width: 30px;
+      height: 30px;
 
       animation-delay: .1s;
 
